syntax = "proto3";
package protos.output.global;

option go_package = "code-analyser/protos/pb/output/global";
import "protos/output/global/command.proto";
message SeedCommandsOutput{
  // check SeedCommand
  bool used = 1;
  // list of all SeedCommand
  repeated Command seedCommands = 2;
}


